<resources>
    <string name="app_name">The Walking School Bus</string>
    <string name="title_monitored_children">Monitored Users</string>
    <string name="action_add">Add User</string>
    <string name="action_remove">Remove</string>
    <string name="title_info">Information</string>
    <string name="title_walking_group">Walking Group</string>
    <string name="msg_password">Password:</string>
    <string name="email">Email:</string>
    <string name="unknown">Unknown</string>
    <string name="title_active_groups">Active Groups</string>
    <string name="join_group_details_destination">Destination</string>
    <string name="join_group_details_meeting_place">Meeting Place</string>
    <string name="join_group_details_join">Join</string>
    <string name="join_group_details_members">Members</string>
    <string name="walking_groups_title">My Walking Groups</string>
    <string name="action_JoinWalkingGroup">Join Walking Group</string>
    <string name="action_LeaveGroup">Leave Walking Group</string>
    <string name="my_group_details_title">Group Details</string>
    <!--<string name="the_walking_school_bus">The Walking School Bus</string>-->
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="password">Password:</string>
    <string name="new_user">New User</string>
    <string name="email_address">Email Address:</string>
    <string name="name">Name:</string>
    <string name="action_cancel">Cancel</string>
    <string name="walking_group">Walking Group</string>
    <string name="monitor_groups">Monitor Groups</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="API_KEY">99CC9DDB-3692-475A-A7D7-9E74C6DA048B</string>
    <string name="action_refresh">REFRESH</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_group_details_members">Group Members</string>
    <string name="action_SeeGroupLocation">See Location</string>
    <string name="title_activity_join_group_maps">Map</string>
    <string name="title_activity_create_group_map">Map</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_set_locations">Set locations</string>
    <string name="group_description">Group Description</string>
    <string name="description">Description</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_detail">Set meeting place and destination locations.\nGreen: Meeting place marker.\nRed: Destination marker.\nSelect marker to remove.</string>
    <string name="action_createWalkingGroup">Create Walking Group</string>
    <string name="childs_email_address">child\'s email address</string>
    <string name="msg_please_input_name">Please input name</string>
    <string name="action_next">Next</string>
    <string name="birth_year">Birth Year:</string>
    <string name="birth_month">Birth Month:</string>
    <string name="address">Address:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="button_confirm">Confirm</string>
    <string name="home_phone">Home Phone:</string>
    <string name="grade">Grade:</string>
    <string name="teacher_s_name">Teacher\'s Name:</string>
    <string name="emergency_contact">Emergency Contact:</string>
    <string name="modify">Modify</string>
    <string name="modify_empty_fields_ignored">Modify (empty fields ignored)</string>
    <string name="save">Save</string>
    <string name="action_confirm">Confirm</string>
    <string name="messaging">MESSAGING</string>
    <string name="message">Message</string>
    <string name="my_information">My Information</string>
    <string name="dash_board">DASHBOARD</string>
    <string name="title_dash_board"> Dashboard</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="read_messages">Read Messages</string>
    <string name="action_newMessage">NEW MESSAGE</string>
    <string name="title_activity_group_members_parents">GroupMembersParentsActivity</string>
    <string name="group_members_parents_title">Parents of </string>
    <string name="text_parent_info">Name:</string>
    <string name="text_parent_info_email">Email:</string>
    <string name="text_parent_info_cell">Cell Number:</string>
    <string name="text_parent_info_Home">Home Number:</string>
    <string name="emergency">Emergency</string>
    <string name="OWA_text_panic_disclaimer">This is for EMERGENCIES only.
        An emergency message will notify all Parents and Leaders of danger.</string>
    <string name="OWA_text_message_optional">Message (optional):</string>
    <string name="OWA_btn_send">Send</string>
    <string name="OWA_btn_cancel">Cancel</string>
    <string name="action_send">SEND</string>
    <string name="hint_input_message">input message</string>
    <string name="recipient">Recipient:</string>
    <string name="WG_leadGroups">Groups I Lead</string>
    <string name="WG_joinedGroups">Joined Groups</string>
    <string name="MGD_leaderTitle">Group Leader</string>
    <string name="title_activity_on_walk_map">Map</string>
    <string name="start_walk">Start Walk</string>
    <string name="sender">Sender</string>
    <string name="content">content</string>
    <string name="date">date</string>
    <string name="title_activity_view_monitored_user_map">Map</string>
    <string name="end_walk">End Walk?</string>
    <string name="view_all_users">View All Users</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_user">View User</string>
    <string name="MMA_rewards_centre">Rewards Centre</string>
    <string name="title_activity_rewards_centre">RewardsCentreActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="RA_next">Next</string>

    <string name="RCA_shop">Shop</string>
    <string name="RCA_leaderboard">Leaderboard</string>
    <string name="RCA_my_rewards">My Rewards</string>
    <string name="RCA_name">Name</string>
    <string name="RCA_app_themes">App Themes:</string>
    <string name="RCA_instructions">Select a reward to apply:</string>
    <string name="RCA_set">Set</string>
    <string name="RCA_preview">Preview</string>
    <string name="RCA_purchase">Purchase</string>
    <string name="RCA_disclaimer">This theme will cost you 100 points! Would you like to purchase this theme?</string>
    <string name="points">Points</string>
    <string name="permission_centre">Permission Centre</string>
    <string name="old_permission">OLD PERMISSION</string>
    <string name="pending_permission">Pending Permissions</string>
    <string name="action">Action:</string>
    <string name="requester">Requester</string>
    <string name="action_deny">DENY</string>
    <string name="action_approve">APPROVE</string>
    <string name="RCA_previewTitle">Preview: Test Rewards before you buy!</string>
    <string name="PTA_preview">Preview!</string>
    <string name="my_points">My Points:</string>
    <string name="purchase_fire">Purchase Fire</string>
    <string name="purchase_water">Purchase Water</string>
    <string name="purchase_spring">Purchase Spring</string>
    <string name="purchase_dark">Purchase Dark</string>
    <string name="PPA_approved_permissions">Approved Permissions</string>
    <string name="PPA_denied_permissions">Denied Permissions</string>
    <string name="PPDA_authorizors">Authorizors</string>

</resources>
