<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:text="@string/sender"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_content"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="4"
            android:text="@string/content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</RelativeLayout>