<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jade.walkinggroupbus.walkingschoolbus.app.RegisterAdditionalActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_newuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/new_user"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_birth_year"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birth_year"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_birth_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_birth_month"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birth_month"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_birth_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_address"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textVisiblePassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_cell_phone"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cell_phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_cell_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_home_phone"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_home_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_grade"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/grade"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textVisiblePassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_teacher_name"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teacher_s_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textVisiblePassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_emergency_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/emergency_contact"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_emergency_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textVisiblePassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@android:color/holo_red_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_confirm" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cancel" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
