<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jade.walkinggroupbus.walkingschoolbus.app.WalkingGroupsActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/WGLinearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/walking_groups_title"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout3"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/action_refresh" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_tvTitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/text_joinedGroups"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/WG_joinedGroups"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/test_LeadGroups"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/WG_leadGroups"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_listViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listView_my_groups"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <ListView
                android:id="@+id/listView_leaderGroups"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_join_walking_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_refresh"
            android:layout_alignBottom="@+id/button_refresh"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:text="@string/action_JoinWalkingGroup" />

        <Button
            android:id="@+id/button_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_refresh"
            android:layout_alignBottom="@+id/button_refresh"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:text="@string/action_createWalkingGroup"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>
